# randombeacon-test

./: .gitignore  Cargo.lock.bak  Cargo.toml  README.md  baseline_phase1.md  bench_hashrand_local.sh  bench_ppt_local.sh  benchmark_data.txt  benchmark_visualize.py  ip_file  ppt_beacon_refactor_report.md  run_benchmark.sh  run_ppt_test.sh
baseline_records/20260330_005707/: 00_repo_path.txt  01_rustc_version.txt  02_cargo_version.txt  09_benchmark_key_lines.txt  10_BASELINE_NOTES.md
baseline_records/20260330_005707/files/: Cargo.toml
baseline_records/20260330_005707/files/benchmark/benchmark/: commands.py  local.py
baseline_records/20260330_005707/files/scripts/: beacon-test.sh
bench_results/20260326_012203/: summary.csv
benchmark/: README.md  client.json  fabfile.py  genconfig  instance-ips.json  ip_file  nodes-0.json  nodes-1.json  nodes-2.json  nodes-3.json  script.sh  settings.json  syncer  syncer.json
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  logs.py  remote.py  settings.py  utils.py
config/src/: client.rs  node.rs
consensus/: Cargo.toml
consensus/beacon/: Cargo.toml
consensus/beacon/src/node/: context.rs  handler.rs  mod.rs  process.rs
consensus/beacon/src/node/appxcon/: bin_appxcon.rs  comm_election.rs  mod.rs
consensus/beacon/src/node/batch_wss/: batch_wssinit.rs  mod.rs  secret_reconstruct.rs
consensus/beacon/src/node/ctrbc/: init.rs  ready.rs  reconstruct.rs
consensus/beacon/src/node/gather/: gather.rs
consensus/beacon/src/node/shamir/: mod.rs  shamirss.rs
consensus/dag_rider/: Cargo.toml
consensus/dag_rider/src/node/: context.rs  handler.rs  mod.rs  process.rs  roundvals.rs
consensus/dag_rider/src/node/baa/: baainit.rs  mod.rs
consensus/dag_rider/src/node/batch_wss/: batch_wss_reconstruct.rs  batch_wssinit.rs  batchvss_state.rs  batchwss_echo.rs  batchwss_ready.rs  mod.rs  secret_reconstruct.rs  shamirss.rs
consensus/dag_rider/src/node/dag/: baawitness.rs  dagstate.rs  echo.rs  init.rs  mod.rs  rbcstate.rs  ready.rs
consensus/dag_rider/src/node/mempool/: mempool.rs  mod.rs  parameters.rs  processor.rs  txrecv_handler.rs
consensus/glow_dvrf/: Cargo.toml  Cargo.toml.bak
consensus/glow_dvrf/src/node/: context.rs  handler.rs  process.rs  wrapper_msg.rs
consensus/glow_dvrf/src/node/threshold_bls/: party_i.rs  test.rs
consensus/glow_lib/: Cargo.toml
consensus/glow_lib/src/node/: context.rs  mod.rs  process.rs
consensus/hashrand/: Cargo.toml
consensus/hashrand/src/node/: context.rs  manager.rs  mod.rs  process.rs
consensus/hashrand/src/node/appxcon/: bin_appxcon.rs  (+3 more)
consensus/ppt_beacon/: Cargo.toml
consensus/ppt_beacon/src/node/: context.rs  handler.rs  mod.rs  process.rs
crypto/: Cargo.toml
crypto/src/: crypto.rs  hash.rs  hash_aes.rs  lib.rs  secret.rs
crypto/src/aes_hash/: hash.rs
crypto/src/aes_hash/merkle/: merkle.rs  mod.rs  proof.rs
crypto_blstrs/: Cargo.toml
crypto_blstrs/src/: lib.rs  polynomial.rs  threshold_sig.rs  vector_commit.rs
crypto_blstrs/src/poly_commit/: feldman.rs  kzg.rs
design/p3/: tree_level3.txt
node/: Cargo.toml
node/src/: cli.yml  lib.rs  main.rs  syncer.rs
scripts/: beacon-test.sh  stage_throughput.py
testdata/cc_16/: client.json  nodes-0.json  nodes-1.json  nodes-10.json  nodes-11.json  nodes-12.json  nodes-13.json  nodes-14.json  nodes-15.json  nodes-2.json  nodes-3.json  nodes-4.json  nodes-5.json  nodes-6.json  nodes-7.json  nodes-8.json  nodes-9.json  syncer  syncer.json
testdata/cc_4/: client.json  nodes-0.json  nodes-1.json  nodes-2.json  nodes-3.json  syncer  syncer.json
tools/genconfig/: Cargo.toml
tools/genconfig/src/: cli.yml  main.rs
types/: Cargo.toml
types/src/: protocol.rs
types/src/msg/: mod.rs  sync.rs
types/src/msg/appxcon/: erasure.rs  mod.rs  msg.rs
types/src/msg/beacon/: mod.rs  msg.rs
types/src/msg/hash_cc/: msg.rs
types/src/msg/rbc/: mod.rs  msg.rs  proto.rs
(+36 files in other folders)
