[package]
name = "types"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
crypto = {package = "crypto", path = "../crypto"}
linked-hash-map = "0.5"
tokio-util = {version = "0.6", features= ["codec"]}
bytes = "1.0"
log = "0.4"
fnv = "1"
reed-solomon-erasure = "4.0"
num-bigint-dig = "0.4"
num-bigint = {version = "0.2.6", features = ["rand"]}
sha2="0.9.2"
sha3="0.9.1"
base64 = "0.13.1"

[features]
default=["mempool"]
mempool=[]