[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reed-solomon-erasure = "4.0"
crypto = { package = "crypto", path="../../crypto"}
consensus = { package = "consensus", path="../"}
types = { package = "types", path="../../types"}
sha2="0.9.2"
config = { package = "config", path="../../config"}
tokio = { version = "1.0", features = ["full"] }
futures = "^0.3"
bincode = "1"
bytes = "1.0"
tokio-util = "0.6.2"
tokio-stream = "0.1"
serde = "1.0.70"
log="*"
priority-queue="1"
fnv = "1"
async-recursion = "1.0.0"
rand = "0.6"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
num-bigint-dig = "0.4"
num-bigint = {version = "0.2.6", features = ["rand"]}
num-traits = "0.2.11"
num-integer = {version = "0.1.42", features = ["std", "i128"]}
anyhow = "1"
aes = "0.8.3"

async-trait = "0"
futures-util = "0"
network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git" }

nohash-hasher = "0.2.0"