[package]
name = "dag_rider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle_light={version="0.4.0"}
reed-solomon-erasure = "4.0"
crypto = { package = "crypto", path="../../crypto"}
consensus = { package = "consensus", path="../"}
types = { package = "types", path="../../types"}
sha2="0.9.2"
config = { package = "config", path="../../config"}
#net = { package = "net", path="../../net"}
util = { package = "util", path="../../util"}
tokio = { version = "1.0", features = ["full"] }
futures = "^0.3"
bincode = "1"
bytes = "1.0"
tokio-util = "0.6"
tokio-stream = "0.1"
serde = "1.0.70"
log="*"
priority-queue="1"
fnv = "1"
async-recursion = "1.0.0"
rand = "0.6"
num-bigint-dig = "0.4"
num-bigint = {version = "0.2.6", features = ["rand"]}
num-traits = "0.2.11"
num-integer = {version = "0.1.42", features = ["std", "i128"]}
secp256k1 = {version = "0.17.2", features = ["rand-std", "serde"]}
base64="0.13.1"

linked_hash_set = "0.1.4"

anyhow = "1"

async-trait = "0"
futures-util = "0"
network = { package = "network", git = "https://github.com/akhilsb/libnet-rs.git" }

nohash-hasher = "0.2.0"